--- a/denite.toml
+++ b/denite.toml
@@ -1,4 +1,7 @@
-" --------------Denite keybind-------------
+[[plugins]]
+repo = 'Shougo/denite.nvim'
+
+hook_add = '''
 nnoremap df :Denite file<CR>
 nnoremap db :Denite buffer<CR>
 nnoremap dfi :Denite -input= file<Left><Left><Left><Left><Left>
@@ -11,14 +14,11 @@ nnoremap dg :Denite grep<CR>
 nnoremap dgp :Denite grep/py<CR>
 nnoremap ddr :Denite defx/drive<CR>
 nnoremap dbm :Denite d-bookmark<CR>
-"-----------------------------------------
 
-"-------------------------denite Define mappings-------------------------
-"
 call denite#custom#kind('dirmark/add', 'default_action', 'add')
 call denite#custom#kind('buffer', 'default_action', 'open')
-"call denite#custom#kind('file', 'default_action', 'split')
-"
+call denite#custom#kind('file', 'default_action', 'split')
+
 autocmd FileType denite call s:denite_my_settings()
 function! s:denite_my_settings() abort
   nnoremap <silent><buffer><expr> <CR>
@@ -45,24 +45,19 @@ function! s:denite_filter_my_settings() abort
   imap <silent><buffer> <C-o> <Plug>(denite_filter_quit)
 endfunction
 
-" Change file/rec command.
 call denite#custom#var('file/rec', 'command',
 \ ['ag', '--follow', '--nocolor', '--nogroup', '-g', ''])
 
-" Change matchers.
 call denite#custom#source(
 \ 'file_mru', 'matchers', ['matcher/fuzzy', 'matcher/project_files'])
 call denite#custom#source(
 \ 'file/rec', 'matchers', ['matcher/cpsm'])
 
-" Change sorters.
 call denite#custom#source(
 \ 'file/rec', 'sorters', ['sorter/sublime'])
 
-" Change default action.
 call denite#custom#kind('file', 'default_action', 'split')
 
-" Add custom menus
 let s:menus = {}
 
 let s:menus.zsh = {
@@ -84,7 +79,6 @@ let s:menus.my_commands.command_candidates = [
 
 call denite#custom#var('menu', 'menus', s:menus)
 
-"" Ag command on grep source
 call denite#custom#var('grep', 'command', ['ag'])
 call denite#custom#var('grep', 'default_opts',
 		\ ['-i', '--vimgrep'])
@@ -93,11 +87,6 @@ call denite#custom#var('grep', 'pattern_opt', [])
 call denite#custom#var('grep', 'separator', ['--'])
 call denite#custom#var('grep', 'final_opts', [])
 
-" Specify multiple paths in grep source
-"call denite#start([{'name': 'grep',
-"      \ 'args': [['a.vim', 'b.vim'], '', 'pattern']}])
-
-" Define alias
 call denite#custom#alias('source', 'file/rec/git', 'file/rec')
 call denite#custom#var('file/rec/git', 'command',
       \ ['git', 'ls-files', '-co', '--exclude-standard'])
@@ -113,19 +102,21 @@ call denite#custom#var('grep/py', 'pattern_opt', [])
 call denite#custom#var('grep/py', 'separator', ['--'])
 call denite#custom#var('grep/py', 'final_opts', [])
 
-" Change ignore_globs
 call denite#custom#filter('matcher/ignore_globs', 'ignore_globs',
       \ [ '.git/', '.ropeproject/', '__pycache__/',
       \   'venv/', 'images/', '*.min.*', 'img/', 'fonts/'])
 
-" Custom action
-" Note: lambda function is not supported in Vim8.
 call denite#custom#action('file', 'test',
       \ {context -> execute('let g:foo = 1')})
 call denite#custom#action('file', 'test2',
       \ {context -> denite#do_action(
       \  context, 'open', context['targets'])})
 
-"for dirmark
-call dirmark#set_cache_directory_path(plugin_dir . '/.cache/denite-dirmark')
+'''
+
+[[plugins]]
+repo = 'Shougo/neomru.vim'
+
+[[plugins]]
+repo = 'Shougo/neoyank.vim'
 
