--- a/coc.toml
+++ b/coc.toml
@@ -1,5 +1,5 @@
 [[plugins]]
-repo = 'neoclide/coc.nvim'
+repo = 'neoclide/coc.nvim_release'
 
 hook_add = '''
 
@@ -12,14 +12,8 @@ set nobackup
 set nowritebackup
 
 set cmdheight=2
-
-
 set updatetime=300
-
-
 set shortmess+=c
-
-
 set signcolumn=yes
 
 
